--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -18,6 +18,11 @@
                 android:layout_height="wrap_content"
                 android:text="Status: "
                 android:layout_gravity="center" android:id="@id/lblStatus"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="StopService"
+                android:id="@+id/stop_service" android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
 
