--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,12 +13,12 @@
         <LinearLayout android:layout_centerHorizontal="true" android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       android:layout_alignParentBottom="true"
-                      android:orientation="vertical">
+                      android:orientation="vertical" android:paddingBottom="0dp" android:layout_marginBottom="100dp">
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Status: "
-                    android:layout_gravity="center" android:id="@+id/lblStatus"/>
+                    android:layout_gravity="center" android:id="@+id/lblStatus" android:textSize="24dp"/>
         <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
